package net;

enum Protocol {
  Net = 0;
  RouteSrv = 1;
  SessionSrv = 2;
  OriginSrv = 3;
  JobSrv = 4;
  Scheduler = 5;
}

enum Os {
  Linux = 1;
  Darwin = 2;
  Windows = 3;
}

enum WorkerState {
  Ready = 0;
  Busy = 1;
}

message Heartbeat {
  optional string endpoint = 1;
  optional Os os = 2;
  optional WorkerState state = 3;
}

message RouteInfo {
  optional Protocol protocol = 1;
  optional uint64 hash = 2;
}

message Msg {
  optional string message_id = 1;
  optional bytes body = 2;
  optional RouteInfo route_info = 3;
}

enum ErrCode {
  // Generic
  BUG = 0;
  TIMEOUT = 1;
  REMOTE_REJECTED = 2;
  BAD_REMOTE_REPLY = 3;
  ENTITY_NOT_FOUND = 4;
  NO_SHARD = 6;
  ACCESS_DENIED = 7;
  SESSION_EXPIRED = 8;
  ENTITY_CONFLICT = 9;
  ZMQ = 10;
  DATA_STORE = 11;
  AUTH_SCOPE = 12;

  // Worker
  WORKSPACE_SETUP = 1000;
  SECRET_KEY_FETCH = 1001;
  SECRET_KEY_IMPORT = 1002;
  VCS_CLONE = 1003;
  BUILD = 1004;
  POST_PROCESSOR = 1005;
}

message NetError {
  optional ErrCode code = 1;
  optional string msg = 2;
}

message NetOk {}
message Ping {}
message Pong {}
